style(ui-update): ensure file names in "new" template are not cut off at the bottom #1297 [skip ci]

--- a/client/fineuploader-new.css
+++ b/client/fineuploader-new.css
@@ -181,7 +181,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow-x: hidden;
-    height: 16px;
+    height: 18px;
 }
 .qq-upload-spinner {
     display: inline-block;
